--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : simple site
+title : Bridgetown Electric
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
+  name : Ian Young
+  email : iany@bridgetownelectric.com
   github : kbroman
   twitter : kwbroman
   feedburner : nil
